# acquire-research-papers

./: .gitignore  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
agents/: openai.yaml
docs/superpowers/plans/: 2026-07-19-acquire-research-papers-implementation.md  2026-07-19-sciencedirect-scau-auth.md  2026-07-21-extensible-corpus-discovery-acquisition.md
docs/superpowers/specs/: 2026-07-19-acquire-research-papers-design.md  (+2 more)
references/: corpus-mode.md  credentials-and-cache.md  research-mode.md  source-policies.md
schemas/: corpus-spec.schema.json  paper-record.schema.json  research-brief.schema.json
scripts/: ieee-playwright.mjs  install-playwright.ps1  migrate-legacy-secrets.ps1  read-browser-credential.ps1  read-elsevier-api-key.ps1  read-institution-profile.ps1  read-mineru-token.ps1  read-sciencedirect-credential.ps1  sciencedirect-playwright.mjs  secret-store.ps1  setup-elsevier-api-key.ps1  setup-ieee-institution.ps1  setup-mineru-token.ps1  setup-sciencedirect-secret.ps1  setup-secrets.ps1  update-ieee-institution-entity.ps1  update-ieee-institution-route.ps1  validate_skill.py
src/acquire_research_papers/: __init__.py  artifacts.py  bibliography.py  cli.py  config.py  delivery.py  http.py  mineru.py  models.py  paths.py  registry.py  resolver.py  selection.py  specs.py
tests/: conftest.py
tests/fixtures/acl/: paper.html
tests/integration/: test_corpus_acquire_cli.py  test_corpus_cli.py  test_corpus_review_cli.py  test_direct_adapter.py  test_export_md_cli.py  test_fetch_cli.py  test_manual_fetch_cli.py  test_mineru_cache.py  test_research_cli.py  test_selected_manual_fetch_cli.py
tests/node/: test-ieee-playwright.mjs  test-sciencedirect-playwright.mjs
tests/powershell/: test-install-playwright.ps1  test-secret-store.ps1
tests/unit/: test_acl_adapter.py  test_acl_discovery.py  test_acm_adapter.py  test_adapter_router.py  test_artifacts.py  test_bibliography.py  test_cli_resources.py  test_corpus.py  test_corpus_discovery_workflow.py  test_corpus_review.py  test_delivery.py  test_discovery_clients.py  test_discovery_contracts.py  test_discovery_coordinator.py  test_discovery_evidence.py  test_elsevier_api.py  test_evidence.py  test_http.py  test_ieee_bridge.py  test_ijcai_adapter.py  test_ijcai_discovery.py  test_manual_handoff.py  test_mineru.py  test_models.py  test_no_sensitive_artifacts.py  test_paths.py  test_registry.py  test_research_delivery.py  test_research_discoverer.py  test_research_planner.py  test_resolver.py  test_sciencedirect_adapter.py  test_sciencedirect_bridge.py  test_selection.py  test_skill_layout.py  test_specs.py
(+50 files in other folders)
